fix mobile spacing-weird double line seen on kenzies phone

--- a/styles.css
+++ b/styles.css
@@ -3504,7 +3504,7 @@ textarea.w-select {
     }
 
     .text-block-4 {
-        font-size: 6vw;
+        font-size: 5vw;
         line-height: 8vw;
     }
 
@@ -3542,6 +3542,10 @@ textarea.w-select {
     .text-block-8.signs {
         font-size: 4vw;
         line-height: 5vw;
+    }
+
+    .image-6 {
+        height: 5vh;
     }
 
     .div-block-4.drewbucha-hero {
@@ -3634,8 +3638,13 @@ textarea.w-select {
         margin-right: 2svw;
     }
 
+    .text-block-4 {
+        word-break: normal;
+        object-fit: fill;
+    }
+
     .image-6 {
-        height: 3vh;
+        height: 6vw;
     }
 }
 
